--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,10 @@
+body {
+  background-color: #eaf6f6;
+}
 
+hr {
+  border-style: dotted none none;
+  border-color: grey;
+  border-width: 5px;
+  width: 5%;
+}
